--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Minecraft Login</title>
+    <style>
+        body {background-color: black;}
+    </style>
 </head>
+
 <body>
+    <header>
+        <h1>Oopsssss,why didn't I explode?</h1>
+    </header>
+
 
 </body>
 </html>
