--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Minecraft Login</title>
     <style>
         body {background-color: black;}
+        h1 {color: white;}
     </style>
 </head>
 
