--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Minecraft Login</title>
     <style>
         body {background-color: black;}
-        h1 {color: white;}
+        header {color: white;}
     </style>
 </head>
 
@@ -14,6 +14,12 @@
         <h1>Oopsssss,why didn't I explode?</h1>
     </header>
 
+    <div class="creeper">
+        <img src="imgs/creeper.png" alt="picture can't be shown">
+        <div class="bottom">
+            <p>Wait a moment for my explosion</p>
+        </div>
+    </div>
 
 </body>
 </html>
