--- a/index.html
+++ b/index.html
@@ -5,19 +5,42 @@
     <title>Minecraft Login</title>
     <style>
         body {background-color: black;}
-        header {color: white;}
+        header
+        {
+            color: white;
+            text-align: center;
+            padding:10px;
+        }
+
+        .creeper
+        {
+            max-width: 800px;
+            padding: 0 350px;
+        }
+
+        img
+        {
+            max-width: 100%;
+        }
+
+        .bottom
+        {
+            color: white;
+            text-align: center;
+            padding:10px;
+        }
     </style>
 </head>
 
 <body>
     <header>
-        <h1>Oopsssss,why didn't I explode?</h1>
+        <h1>Oopssssssss...why didn't I explode?</h1>
     </header>
 
     <div class="creeper">
         <img src="imgs/creeper.png" alt="picture can't be shown">
         <div class="bottom">
-            <p>Wait a moment for my explosion</p>
+            <h1>Wait a moment for my explosion</h1>
         </div>
     </div>
 
